# monster-risk

./: .gitignore  Cargo.toml  DEV_GUIDE.md  Makefile  PATCH.md  PROJECT_DEV_DOC.md  README.md  run_glommio_l1_wsl.sh  run_server_pinned_l1.sh
crates/risk-bench/: Cargo.toml
crates/risk-bench/src/: main.rs
crates/risk-bench2/: Cargo.toml
crates/risk-bench2/src/: main.rs
crates/risk-core/: Cargo.toml  build.rs
crates/risk-core/src/: config.rs  feature_store.rs  feature_store_u64.rs  lib.rs  model.rs  native_l1_m2cgen.rs  native_l1_m2cgen_gen.rs  native_l1_tl2cgen.rs  native_l2_tl2cgen.rs  pipeline.rs  ring_buf.rs  schema.rs  stateful_l2.rs  util.rs  xgb_pool.rs  xgb_runtime.rs
crates/risk-server-glommio/: Cargo.toml
crates/risk-server-glommio/src/: main.rs
crates/risk-server-tokio/: Cargo.toml
crates/risk-server-tokio/src/: main.rs  pin.rs
crates/xgb-ffi/: Cargo.toml  build.rs
crates/xgb-ffi/src/: lib.rs  xgb_ffi.rs
crates/xgb-ffi/tests/: smoke.rs
scores/: l1_labels_20k.u8  l1_labels_20k_train.u8  l1_scores_20k.f32  l1_scores_20k_train.f32
scripts/: jsonl_to_dense_f32le.py  make_ieee_jsonl_polars.py  summarize.py  train_ieee_l1_l2_polars_hardneg.py  train_ieee_xgb_polars.py
scripts/bench/: tokio_run_once.sh  tokio_sweep_l2_budget_manual.sh  tokio_sweep_poisson.sh
scripts/ml/: adversarial_validate_ieee_polars.py  calibrate_policy_quantiles.py  export_l1_tl2cgen_c.py  score_xgb_dense_f32le.py  sweep_policy_frontier.py  train_xgb_ieee_polars.py
scripts/plot/: plot_l2_budget_sweep.py
