[package]
name = "risk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
once_cell = "1"
metrics = "0.23"
thiserror = "1"
anyhow = "1"
flate2 = "1"
#xgboost = { package = "xgboostrs", version = "0.2.0" }
xgb_ffi = { path = "../xgb-ffi" }
