[package]
name = "risk-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
once_cell = "1"
metrics = "0.23"
thiserror = "1"
anyhow = "1"
flate2 = "1"
#xgboost = { package = "xgboostrs", version = "0.2.0" }
xgb_ffi = { path = "../xgb-ffi" }
crossbeam-channel = "0.5"
futures-channel = "0.3"
core_affinity = "0.8"
# risk-core only needs Tokio's sync primitives (mpsc/oneshot). Keep it minimal so
# it builds cleanly even when the top-level binary is not Tokio-based (e.g. glommio).
tokio = { version = "1", features = ["sync"] }
libc = "0.2"
bytes = "1"
#xgb-ffi = { path = "../xgb-ffi" }
