[package]
name = "risk-server-glommio"
version = "0.1.0"
edition = "2021"

[dependencies]
risk-core = { path = "../risk-core" }

glommio = "0.9"
futures-lite = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

metrics = "0.23"
metrics-exporter-prometheus = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
