[package]
name = "risk-server-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
risk-core = { path = "../risk-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
